Set up Cypress E2E tests

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "cypress": "cypress open",
     "lint": "eslint src"
   },
   "eslintConfig": {
